; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_res.c_unmap_file_from_memory.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/kernel32/wine/extr_res.c_unmap_file_from_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mapping_info = type { i32* }

@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mapping_info*)* @unmap_file_from_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unmap_file_from_memory(%struct.mapping_info* %0) #0 {
  %2 = alloca %struct.mapping_info*, align 8
  store %struct.mapping_info* %0, %struct.mapping_info** %2, align 8
  %3 = load %struct.mapping_info*, %struct.mapping_info** %2, align 8
  %4 = getelementptr inbounds %struct.mapping_info, %struct.mapping_info* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.mapping_info*, %struct.mapping_info** %2, align 8
  %9 = getelementptr inbounds %struct.mapping_info, %struct.mapping_info* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @UnmapViewOfFile(i32* %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.mapping_info*, %struct.mapping_info** %2, align 8
  %14 = getelementptr inbounds %struct.mapping_info, %struct.mapping_info* %13, i32 0, i32 0
  store i32* null, i32** %14, align 8
  %15 = load i32, i32* @TRUE, align 4
  ret i32 %15
}

declare dso_local i32 @UnmapViewOfFile(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
